# embedded-commandline

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  embedded-commandline.sublime-project  embedded-commandline.sublime-workspace
embedded-commmandline/: embedded-commmandline.sln
embedded-commmandline/embedded-commmandline/: embedded-commmandline.vcxproj  embedded-commmandline.vcxproj.filters
src/: Command.h  CommandManager.h  DumbLineEditor.h  InputOutput.h  LineEditor.h  LineHandler.h
test/: CMakeLists.txt  CommandManagerTest.cpp  DumbLineEditorTest.cpp  TestUtils.h
